# worship-attempt

./: .clang-format  .gitignore  Cargo.toml  README.md  fileMenu.cpp  fileMenu.h  format.sh  frag_shader.shader  gl_util.cpp  gl_util.h  imGLsetup.h  imageMenu.cpp  imageMenu.h  main.cpp  makefile  misc-util.h  notes.md  shader_class.h  songEditor.h  sqlite_routines.cpp  sqlite_routines.h  structs.h  tags  vert_shader.shader  worship-attempt.cc
old-code/: fileMenu.cpp  imGLsetup.h  imageMenu.cpp  imageMenu.h  main.cpp  makefile  misc-util.h  shader_class.h  sqlite_routines.cpp  sqlite_routines.h  structs.h
rust-attempt/src/: main.rs
src/: main.rs
